fix dark mode & Link exit button

--- a/modern/frontend/src/index.css
+++ b/modern/frontend/src/index.css
@@ -36,7 +36,3 @@ body{
   padding: 0;
 }
 
-.dark body {
-  background-color: var(--admin-bg);
-  color-scheme: dark;
-}
